<resources>
    <string name="app_name">Kayaka Bandhu</string>
    <string name="version">Version 1.0</string>
    <string name="LOADING">Loading...</string>
    <string name="Panchayath">Panchayath Pradhan</string>
    <string name="ROZGAR_SEWAK">Rozgar Sewak</string>
    <string name="LABOURER">Labourer</string>
    <string name="USER_SELECTION">Select User</string>
    <string name="NEXT">Next</string>
    <string name="USERNAME">Username</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="SIGNUP">Signup</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>
    <string name="APPORVE_LABOURER">Approve Labourer</string>
    <string name="ISSUE_JOB_CARD">Issue Job Card</string>
    <string name="ASSIGN_ROZGAR_SEWAK">Assign Rozgar Sewak</string>
    <string name="ADD_JOB_DETAILS">Add Job Details</string>
    <string name="ALLOT_LABOURERS">Allot Labourers</string>
    <string name="MARK_ATTENDANCE">Mark Attendance</string>
    <string name="MAKE_PAYMENT">Make Payment</string>
    <string name="REGISTER_FOR_SCHEME">Register For Scheme</string>
    <string name="DEMAND_FOR_JOB">Demand For Job</string>
    <string name="VIEW_JOB_CARD">View Job Card</string>
    <string name="REGISTER">Register</string>
    <string name="NAME">Name</string>
    <string name="MAIL">Mail</string>
    <string name="CONTACT">Contact</string>
    <string name="AGE">Age</string>
    <string name="PROFILE_PICTURE">Profile Picture</string>
    <string name="SUBMIT">Submit</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>
    <string name="GENDER">Gender:</string>
    <string name="AADHARID">Aadhar Number</string>
    <string name="BPL_CARD">BPL Card Number</string>
    <string name="VOTER_ID">Voter ID</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="ABOUT_US">About Us</string>
    <string name="LOGOUT">Logout</string>
    <string name="FEEDBACK">Feedback</string>
    <string name="HELP">Help</string>
    <string name="LABOURER_HOME">Labourer Home</string>
    <string name="LABOURER_LOGIN">Labourer Login</string>
    <string name="PRADHAN_HOME">Pradhan Home</string>
    <string name="PRADHAN_LOGIN">Pradhan Login</string>
    <string name="ROZGARSEWAK_HOME">Rozgar Sewak Home</string>
    <string name="ROZGAR_SEWAK_LOGIN">Rozgar Sewak Login</string>
    <string name="APPROVE">Approve</string>
    <string name="LABOURER_DETAILS">Labourer Details</string>
    <string name="MOBILE_NO">Mobile</string>
    <string name="LABOURER_LIST">Labourer List</string>
    <string name="TITLE">Title</string>
    <string name="DESCRIPTION">Description</string>
    <string name="FUNDS">Funds Allotted</string>
    <string name="LABOURERS_REQUIRED">Number of required labourers</string>
    <string name="DURATION">Duration in days</string>
    <string name="ADD">Add</string>
    <string name="ADD_ROZGAR_SEWAK">Add Rozgar Sewak</string>
    <string name="ENTER_NAME">Enter name</string>
    <string name="ENTER_CONTACT">Enter contact number</string>
    <string name="ENTER_MAIL">Enter mail id</string>
    <string name="ENTER_USERNAME">Enter username</string>
    <string name="ENTER_PASSWORD">Enter password</string>
    <string name="ROZGAR_SEWAK_PHOTO">Select Profile Photo</string>
    <string name="GENERATE_QR_CODE">Generate QR Code</string>
    <string name="SELECT_JOB">Select Job:</string>
    <string name="UPDATE">Update</string>
    <string name="SCAN_JOBCARD">Scan Job Card</string>
    <string name="ADD_LABOURER">Add Labourer</string>
    <string name="ADDRESS">Address</string>
    <string name="JOB_RULES"> The mandate is to provide at least 100 days of guaranteed wage employment in a
  financial year to every rural household whose adult members volunteer to do unskilled manual work.\n\n<b><u>What types of works are taken up under the scheme?</u></b>
 \n1. Public Works Relating to Natural Resources Management
 \n2. Individual Assets for Vulnerable Sections
 \n3. Rural Infrastructure</string>
    <string name="AGREE">I agree to take up work provided under the scheme.</string>
    <string name="ENTER_AMOUNT">Enter amount here...</string>
    <string name="SELECT_DATE">Click here to select date...</string>
    <string name="ENTER_PANCHAYATH">Enter Panchayath</string>
    <string name="GRAM_PANCHAYATH"> Panchayath</string>


    <string name="CONFIRM_NEW_PASSWORD">Confirm New Password</string>
    <string name="NEW_PASSWORD">New Password</string>
    <string name="OLD_PASSWORD">Old Password</string>
    <string name="LABOURER_ID">Labourer ID</string>
    <string name="ALLOT">Allot</string>
    <string name="GENERATE">Generate</string>
    <string name="QR_CODE_DETAILS">QR Code Details</string>
    <string name="AADHAR">Aadhar</string>
    <string name="JOB">Job</string>
    <string name="VIEW_JOBS">View Jobs</string>
    <string name="JOB_LIST">Job List</string>
    <string name="MOBILE">Mobile</string>
    <string name="PANCHAYATH">Panchayath</string>
    <string name="JOB_CARD_DETAILS">Job Card Details</string>
    <string name="VIEW_ATTENDANCE">View Attendance</string>
    <string name="ATTENDANCE_LIST">Attendance List</string>
    <string name="BANK">Bank Name</string>
    <string name="IFSC">IFSC</string>
    <string name="ACCOUNT">Account Number</string>
    <string name="UPLOAD_PROOF_PHOTOS">Upload Proof Photos</string>
    <string name="UPLOAD">Upload</string>
    <string name="AFTER">Click here to select after photo...</string>
    <string name="BEFORE">Click here to select before photo...</string>
    <string name="PROOF_PHOTOS">Proof Photos</string>
    <string name="BEFORE_PHOTO">Before Photo:</string>
    <string name="PROCEED">Proceed</string>
    <string name="AFTER_PHOTO">After Photo:</string>
    <string name="NO_PROOF">Labourer has not uploaded any proof photos</string>



</resources>
