<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/ADD_ROZGAR_SEWAK"
       android:textSize="30sp"
       android:textStyle="bold"
       android:textColor="@color/primary_text"
       android:gravity="center"
       android:layout_marginBottom="20dp"/>
    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/ENTER_NAME"
        android:id="@+id/name"/>
    <LinearLayout
        style="@style/UnderlineStyle"/>
    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/ENTER_CONTACT"
        android:id="@+id/phno"
        android:inputType="phone"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        style="@style/UnderlineStyle"/>

    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/ENTER_PANCHAYATH"
        android:layout_marginTop="20dp"
        android:id="@+id/gram_panchayath"/>

    <LinearLayout
        style="@style/UnderlineStyle"/>

    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/ENTER_USERNAME"
        android:layout_marginTop="20dp"
        android:id="@+id/username"/>
 <LinearLayout
     style="@style/UnderlineStyle"/>

    <EditText
        style="@style/EditTextStyle"
        android:hint="@string/ENTER_PASSWORD"
        android:layout_marginTop="20dp"
        android:id="@+id/password"
        android:inputType="textPassword"/>

    <LinearLayout
        style="@style/UnderlineStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Photo:"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ROZGAR_SEWAK_PHOTO"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:textColorHint="@color/primary_text"
            android:textColor="@color/primary_text"
            android:onClick="selectPhoto"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/image"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        style="@style/ButtonStyle"
        android:layout_margin="50dp"
        android:onClick="addRozgarSewak"
        android:text="@string/ADD"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        />
</LinearLayout></ScrollView>