<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/primary_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/LABOURER_LIST"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/SELECT_JOB"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"
        android:textColor="@color/primary_text"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/joblist"
        />


    <LinearLayout style="@style/LinearLayoutStyle" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_marginTop="10dp"
        >
    </ListView>

    <TextView
        android:id="@+id/no_labourer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <Button
        style="@style/ButtonStyle"
        android:layout_marginTop="30dp"
        android:onClick="update"
        android:text="@string/UPDATE"
        android:id="@+id/button"/>
</LinearLayout>